[package]
name = "arch_repo_builder"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = "3.0"
blake2 = "0.10"
crc = "3"
env_logger = "0.10"
git2 = "0.18"
hex = "0.4"
is-terminal = "0.4"
libc = "0.2"
log = "0.4"
md5 = "0.7"
procfs = "0.15"
pwd = "1.4"
rand = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3.8"
url = "2.4"

[dependencies.clap]
version = "4.3"
features = ["derive"]

[dependencies.nix]
version = "0.27"
features = [ "mount", "process", "user" ]

[dependencies.ureq]
version = "2.8"
features = ["json"]

[dependencies.xxhash-rust]
version = "0.8"
features = ["xxh3"]

[dependencies.time]
version = "0.3"
features = ["formatting", "macros"]
