[package]
name = "arb"
version = "0.2.0"
edition = "2021"

[dependencies]
blake2 = "0.10"
crc = "3.2.1"
env_logger = "0.11"
is-terminal = "0.4"
log = "0.4"
md5 = "0.7"
passwd = "0.0"
rand = "0.8"
rayon = "1.10"
rmp-serde = "1.1"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
url = "2.5"

[dependencies.alnopm]
version = "0.1"
git = "https://github.com/7Ji/alnopm"

[dependencies.clap]
version = "4.4"
features = ["derive"]

[dependencies.git2]
version = "0.18"
default-features = false
features = ["https"]

[dependencies.nix]
version = "0.29"
features = ["fs", "mount", "process", "sched", "signal", "user"]

[dependencies.pkgbuild]
version = "0.1"
git = "https://github.com/7Ji/pkgbuild-rs"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.time]
version = "0.3"
features = ["formatting", "macros"]

[dependencies.ureq]
version = "2.9"
features = ["json"]

[dependencies.xxhash-rust]
version = "0.8"
features = ["xxh3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
